...
    <string name="caption_more">more</string>
    <string name="leave">Leave</string>
    <string name="share_media">Share media</string>
    <string name="video_done">That\'s everything.</string>
    <string name="replay">Replay</string>
    <string name="view_more_replies">View %1$d more replies</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="viewing_post">VIEWING POST</string>
    <string name="video_preview">VIDEO PREVIEW</string>
    <string name="thread">Thread</string>
    <string name="comments_count">%1$d COMMENTS</string>
    <string name="back">Back</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="open_link">Open %1$s</string>
    <string name="play_video">Play video</string>
    <string name="pause">Pause</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="enter_fullscreen">Enter fullscreen</string>
    <string name="exit_fullscreen">Exit fullscreen</string>
    <string name="rotate_to_landscape">Rotate to landscape</string>
    <string name="rotate_to_portrait">Rotate to portrait</string>
    <string name="load_more_comments">Load more comments</string>
    <string name="loading_more_comments">Loading more comments</string>
    <string name="replies_partial">Without a sign-in, X only shows these replies.</string>
    <string name="part_of_a_thread">Part of a thread</string>
    <string name="thread_position">%1$d of %2$d</string>
    <string name="author_thread_partial">These posts came through. Earlier ones need a sign-in on X.</string>
    <string name="playback_position">Playback position</string>
    <string name="previous_media">Previous media</string>
    <string name="next_media">Next media</string>
    <string name="carousel_position">%1$d / %2$d</string>
    <string name="photo_label">PHOTO</string>
    <string name="seek_back_5">Rewind 5 seconds</string>
    <string name="seek_forward_5">Forward 5 seconds</string>
    <string name="playback_speed">Playback speed %1$s</string>
    <string name="loading">Loading</string>
    <string name="content_unavailable">Pane can\'t reach this post</string>
    <string name="unsupported_link_title">Pane can\'t open this kind of link</string>
...
    <string name="refresh">Refresh</string>
    <string name="clipboard_url_unavailable">Copy a web link, then paste here</string>
    <string name="resolving_title">Opening link…</string>
    <string name="resolving_subtitle">Fetching the post.</string>
    <string name="fetching_post_label">OPENING</string>
    <string name="loading_hint">This usually takes a few seconds</string>
    <string name="cancel">Cancel</string>
    <string name="media_options">Media options</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_media">Copy media</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="share_post">Share post</string>
    <string name="open_in_app">Open in app</string>
    <string name="open_in_x">Open in X</string>
    <string name="open_in_facebook">Open in Facebook</string>
...
    <string name="remove_from_recents">Remove from Recents</string>
    <string name="note_and_tags">Note &amp; tags</string>
    <string name="starred_snack">Starred. It\'ll be in History when you want it.</string>
    <string name="unstarred_snack">Star removed</string>
    <string name="history_removed_snack">Removed from History</string>
    <string name="recents_removed_snack">Removed from Recents</string>
    <string name="undo">Undo</string>
    <string name="history_empty_title">History is quiet so far</string>
    <string name="history_empty_body">Posts you open will show up here.</string>
    <string name="starred_empty_title">No stars yet</string>
    <string name="starred_empty_body">Tap the star on a post to keep it close.</string>
    <string name="search_empty_title">Nothing matches that</string>
    <string name="search_empty_body">Try fewer words or clear a filter.</string>
...
